# sqlc-gen-deno-postgres

./: .gitignore  Cargo.toml  Makefile  README.md  _sqlc.json  aqua.yaml  build.rs
.github/workflows/: release.yaml
src/: main.rs
