[package]
name = "sqlc-gen-deno-postgres"
version = "0.1.0-1"
authors = ["Hibiki <mail@4513echo.dev>"]
description = "sqlc plugin for deno-postgres"
edition = "2021"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
build-override.opt-level = 3

[dependencies]
bytes = "1.5.0"
cruet = "0.13.3"
prost = "0.12.0"

[build-dependencies]
prost-build = "0.12.0"
